--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/react": "^11.1.0",
+    "bootstrap": "^5.0.0-beta3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -23,7 +24,7 @@
       "react-app/jest"
     ]
   },
-  "browserslist": { 
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
